--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "index.html",
   "author": "yoksel",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yoksel/project-scaffold.git"
+  },
   "devDependencies": {
     "autoprefixer": "^6.3.5",
     "browser-sync": "^2.11.2",
     "colors": "^1.1.2",
     "css-mqpacker": "^4.0.1",
     "cssnano": "^3.5.2",
+    "del": "^2.2.0",
     "editorconfig-tools": "^0.1.1",
     "gulp": "^3.9.1",
     "gulp-copy": "0.0.2",
