--- a/package.json
+++ b/package.json
@@ -11,28 +11,26 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.5",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.7",
     "colors": "^1.1.2",
     "css-mqpacker": "^4.0.1",
     "cssnano": "^3.5.2",
     "del": "^2.2.0",
-    "editorconfig-tools": "^0.1.1",
+    "gh-pages": "^2.2.0",
     "gulp": "^4.0.0",
     "gulp-copy": "0.0.2",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-imagemin": "^2.4.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-include": "^2.1.0",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.2",
-    "imagemin-pngquant": "^4.2.2"
+    "imagemin-pngquant": "^8.0.0"
   },
   "scripts": {
     "start": "gulp serve",
     "img": "gulp images",
     "build": "gulp clean && gulp sass && gulp include && gulp copy",
-    "deploy": "npm run build && gulp ghPages",
-    "check": "editorconfig-tools check *",
-    "fix": "editorconfig-tools fix *"
-  }
+    "deploy": "npm run build && gh-pages -d build"
+  },
+  "dependencies": {}
 }
